# otter_player

./: .gitignore  CMakeLists.txt  README.md  aac_decoder.c  aac_decoder.h  block_queue.c  block_queue.h  buffer_map.c  buffer_map.h  build.bat  byte_list.c  byte_list.h  decoder.h  decoder_master.c  decoder_master.h  frame_data.c  frame_data.h  h264_decoder.c  h264_decoder.h  hash_map.c  hash_map.h  otter_player.c  otter_player.h  pes_block_queue.c  pes_block_queue.h  pes_queue.c  pes_queue.h  player.c  player.h  priority_queue.c  priority_queue.h  test.c  test.h  ts_demuxer.c  ts_demuxer.h  ts_loader.c  ts_loader.h  ts_loader.js
examples/: decode_audio.c
include/libavutil/: ffversion.h
js/: otter_player.js
lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
lib/pkgconfig/: libavcodec.pc  libavutil.pc  libswresample.pc  libswscale.pc
sys/: times.c  times.h
